<resources>
    <string name="app_name">Material_1507_1544_3_1</string>


    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="favourite">Favourite</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="chips_today">Сегодня</string>
    <string name="chips_yesterday">Вчера</string>
    <string name="chips_before_yesterday">Позавчера</string>
    <string name="calendar">Foto Day</string>
    <string name="system">System</string>
    <string name="weather">Weather</string>
    <string name="photo_of_mars">Photo of Mars</string>
    <string name="photo_of_earth">Photo of Earth</string>
    <string name="button_day">Today</string>
    <string name="button_yesterday">Yester</string>
    <string name="button_before_yesterday">Befor</string>
    <string name="selection_of_the_day">Selection of the day</string>
    <string name="text_btnTextVisibility">Visibility</string>

</resources>