<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_calendar"
        android:title="@string/calendar" />

    <item
        android:id="@+id/navigation_system"
        android:icon="@drawable/ic_system"
        android:title="@string/system" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favourite_menu"
        android:title="@string/favourite" />

    <item
        android:id="@+id/navigation_weather"
        android:icon="@drawable/ic_weather"
        android:title="@string/weather" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_menu"
        android:title="@string/settings" />

</menu>